novo criador do site

--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
     <footer>
       <p>
         Site criado por
-        <a href="https://gustavoguanabara.github.io/" target="_blank"
-          >Gustavo Guanabara</a
+        <a href="#" target="_blank"
+          >Orlando Pagnani</a
         >
-        para o
+        para a aula do
         <a href="https://www.youtube.com/cursoemvideo" target="_blank"
           >CursoemVideo</a
         >.
