atualizacao de fonte

--- a/index.html
+++ b/index.html
@@ -169,9 +169,7 @@
     <footer>
       <p>
         Site criado por
-        <a href="#" target="_blank"
-          >Orlando Pagnani</a
-        >
+        <a href="#" target="_blank">Orlando Pagnani</a>
         para a aula do
         <a href="https://www.youtube.com/cursoemvideo" target="_blank"
           >CursoemVideo</a
